# python_package_tutorial

./: LICENSE  README.md  pyproject.toml
src/palindrome_gregstephensjr/: phrase.py
tests/: test_phrase.py
