[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_gregstephensjr"
version = "0.0.2"
authors = [
  { name="Greg Stephens Jr", email="greg@gregstephensjr.com" },
]
description = "A sample Python package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gregstephensjr/python_package_tutorial"
"Bug Tracker" = "https://github.com/gregstephensjr/python_package_tutorial/issues"
